# carp-analytics-python

./: .gitignore  CHANGELOG.md  LICENSE  README.md  demo.ipynb  disc.py  generated_types.py  main.py  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: api.rst  architecture.rst  cli.rst  conf.py  index.rst  overview.rst
examples/: demo.ipynb  disc.py  generated_types.py  main.py
src/carp/: __init__.py  cli.py  constants.py  reader.py  study.py
src/carp/commandline/: __init__.py  app.py  common.py  convert.py  count.py  export.py  participants.py  schema.py
src/carp/core/: __init__.py  dependencies.py  fields.py  files.py  models.py  naming.py
src/carp/export/: __init__.py  service.py
src/carp/frames/: __init__.py  service.py
src/carp/participants/: __init__.py  directory.py  parser.py  service.py  view.py
src/carp/plotting/: __init__.py  map_viz.py  prepare.py  render.py  service.py
src/carp/records/: __init__.py  service.py
src/carp/schema/: __init__.py  service.py
src/carp/types/: __init__.py  infer.py  render.py  service.py
src/sleepiness/: __init__.py  reader.py
src/sleepiness/plotting/: __init__.py  map_viz.py
tests/: conftest.py  test_cli.py  test_core.py  test_edge_frames_plotting.py  test_edge_types_cli.py  test_export.py  test_frames.py  test_participants.py  test_real_data.py  test_records_schema.py  test_structure.py  test_types_plotting.py
tests/fixtures/multi_phase/phase_a/: data-streams.json  participant-data.json
tests/fixtures/multi_phase/phase_b/: data-streams.json  participant-data.json
