[project]
name = "sleepiness"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ijson>=3.4.0.post0",
    "matplotlib>=3.10.7",
    "msgspec>=0.19.0",
    "numba>=0.62.1",
    "numpy>=2.3.5",
    "pandas>=2.2.0",
    "pyarrow>=22.0.0",
    "pyyaml>=6.0.3",
    "rich>=14.2.0",
    "scikit-learn>=1.7.2",
    "scipy>=1.16.3",
    "tqdm>=4.67.1",
    "visidata>=3.3",
    "folium>=0.20.0",
]
