[project]
name = "carp-analytics-python"
version = "0.1.0"
description = "A high-performance Python library for processing and analysing data from CARP (Copenhagen Research Platform) clinical studies"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "CARP Team", email = "support@carp.dk" }
]
maintainers = [
    { name = "CARP Team", email = "support@carp.dk" }
]
keywords = [
    "carp",
    "clinical-studies",
    "health-data",
    "json-streaming",
    "data-processing",
    "parquet",
    "pandas",
    "research",
    "mhealth",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Healthcare Industry",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "ijson>=3.2.0",
    "rich>=13.0.0",
    "tqdm>=4.65.0",
]

[project.optional-dependencies]
pandas = [
    "pandas>=2.0.0",
    "pyarrow>=14.0.0",
]
viz = [
    "matplotlib>=3.7.0",
    "folium>=0.14.0",
]
science = [
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "scikit-learn>=1.3.0",
]
all = [
    "carp-analytics-python[pandas,viz,science]",
    "numba>=0.57.0",
]

[project.urls]
Homepage = "https://carp.dk"
Documentation = "https://docs.carp.dk"
Repository = "https://github.com/carp-dk/carp-analytics-python.git"
Issues = "https://github.com/carp-dk/carp-analytics-python/issues"
Changelog = "https://github.com/carp-dk/carp-analytics-python/blob/main/CHANGELOG.md"

[project.scripts]
carp = "carp.cli:main"

[dependency-groups]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "mypy>=1.5.0",
    "ruff>=0.1.0",
    "pre-commit>=3.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = [
    "/src",
]
exclude = [
    "*.pyc",
    "__pycache__",
    ".git",
]

[tool.hatch.build.targets.wheel]
packages = ["src/carp"]

[tool.ruff]
target-version = "py310"
line-length = 100
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.isort]
known-first-party = ["carp"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
exclude = ["examples/", "tests/"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["src/carp"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
